HD services pic, fixed spacing, font weight in about bio

--- a/styles/Services.module.css
+++ b/styles/Services.module.css
@@ -37,6 +37,7 @@
     flex-wrap: wrap;
     width: 100%;
     align-items: center;
+    padding-bottom: 3rem;
 }
 
 .bodyImage {
