--- a/styles/globals.css
+++ b/styles/globals.css
@@ -131,3 +131,7 @@ main {
   max-width: 1500px;
   margin: auto;
 }
+
+bold {
+  font-weight: 500;
+}
